--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.0
-  # image_picker: ^1.0.5
+  image_picker: ^1.1.0
   intl_phone_field: ^3.1.0
+  pinput: ^4.0.0
   svg_flutter: ^0.0.1
   table_calendar: ^3.1.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
   flutter_test:
     sdk: flutter
 
@@ -69,6 +70,12 @@ flutter:
     - family: Inter
       fonts:
         - asset: assets/fonts/Inter-Regular.ttf
+        - asset: assets/fonts/Inter-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Inter-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
